tests/tests/snapshots/host_syntax_identity__identity_expr__sim-broker-slice__HandleB.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (db-insert ProcessedByBTable (record-cons ProcessedByB (id (uuid-new)) (ping_id (field-access p id)) (seq (field-access p seq)))))
(return p)
